examples/test/testpolicy14378.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14378
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key39: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value40
      podSelector:
        matchLabels:
          key44: value0
          key46: value8
          key2: value4
